collapsable legends, fixes #275 and #228

--- a/media/common/trees.css
+++ b/media/common/trees.css
@@ -143,13 +143,14 @@ img.olTileImage {
 label.olButton {
     display: inline;
     float: none;
-    padding: 9px 10px 11px;
+    margin-top: 2px;
+    padding-left: 10px;
     line-height: 19px;
-    color: white;
+    color: #555;
     text-decoration: none;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 13px;
+    /* text-shadow: 0 2px 0 rgba(0, 0, 0, 0.25); */
+    /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
+	/*font-size: 13px;*/
 }
 .watermarked-image {
     height: 168px;
@@ -183,9 +184,39 @@ a {
 .table tr.active {
     background: white;
 }
+
+#legend-container {
+	top: 58px;
+	left: 10px;
+    margin: 1px;
+    position: absolute; 
+    z-index: 999;
+    text-align:left;
+    vertical-align:center;
+    font-size: 85%;
+    padding: 2px;
+    line-height: 23px;
+}
+#legend-button {
+	display: block;
+	padding: 0;
+	color: white;
+	font-size: 18px;
+	font-family: 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	text-decoration: none;
+	text-align: center;
+	height: 22px;
+	width: 22px;
+	text-shadow: 0 0 3px rgba(0,0,0,0.8);
+	background: #666666;
+	background: rgba(0, 0, 0, 0.3);
+	filter: alpha(opacity=60);
+}
 #searchbox-container {
     background:none;
-	bottom: -17px;
+	bottom: -52px;
+	right: 0px;
     margin: 1px;
     position: absolute; 
     z-index: 1023;
@@ -285,22 +316,7 @@ textarea#id_description {
     font-size: 14pt;
 }
 
-#timemap-legend {
-    text-align: right;
-    padding: 4px;
-    background-color: white;
-    border: 1px solid #CCC;
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    z-index: 99999;
-    opacity: 0.82;
-    font-size: 8pt;
-    max-width: 240px;
-}
+
 
 #year-slider {
     padding: 12px;
@@ -785,4 +801,57 @@ input+label.alert, textarea+label.alert, select+label.alert{
 
 #hide-help {
     margin: 10px;
+}
+
+#legend {
+	text-align: left;
+}
+
+#legend > div {
+	padding-top:8px;
+}
+
+#timemap-legend-container {
+	top: 58px;
+	left: 10px;
+    margin: 1px;
+    position: absolute; 
+    z-index: 999;
+    text-align:left;
+    vertical-align:center;
+    font-size: 85%;
+    padding: 2px;
+}
+
+#timemap-legend-button {
+	display: block;
+	padding: 0;
+	color: white;
+	font-size: 18px;
+	font-family: 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	text-decoration: none;
+	text-align: center;
+	height: 22px;
+	width: 22px;
+	text-shadow: 0 0 3px rgba(0,0,0,0.8);
+	background: #666666;
+	background: rgba(0, 0, 0, 0.3);
+	filter: alpha(opacity=60);
+}
+
+.baseLbl {
+	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	color: #666666;
+	font-weight: bold;
+	padding: 5px 0 5px;
+}
+
+.dataLbl {
+	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 15px;
+	color: #666666;
+	font-weight: bold;
+	padding: 15px 0 5px;
 }
